Got it working. That was an unholy mess to write, but it's awesome now that it's working. Now to build installers.